# whalecum

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  package.json  requirements.txt
backend/: config.py  funds.json  main.py  pyproject.toml
backend/api/: funds.py  holdings.py  insights.py  security.py  series.py
backend/services/: sec_client.py
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: FundDetailPage.tsx  FundsPage.tsx  HoldingsPage.tsx  InsightsPage.tsx  SecurityPage.tsx
scripts/: run-backend.sh  run-frontend.sh
